clang/test/CIR/IR/invalid-annotations.cir
// Test attempt to construct ill-formed global annotations
// RUN: cir-opt %s -verify-diagnostics -split-input-file


// expected-error @below {{invalid kind of attribute specified}}
// expected-error @below {{failed to parse AnnotationAttr parameter 'name' which is to be a `StringAttr`}}
cir.global  external @a = #cir.ptr<null> : !cir.ptr<!cir.double> [#cir.annotation<name = 18, args = ["21", 12 : i32]>]

// -----

// expected-error @below {{GlobalAnnotationValuesAttr should at least have one annotation}}
module attributes {cir.global_annotations = #cir<global_annotations []>} {}

// -----

// expected-error @below {{Element of GlobalAnnotationValuesAttr annotations array must be an array}}
module attributes {cir.global_annotations = #cir<global_annotations ["2"]>} {}

// -----

// expected-error @below {{Element of GlobalAnnotationValuesAttr annotations array must be a 2-element array}}
module attributes {cir.global_annotations = #cir<global_annotations [["2",1,2]]>} {}

// -----

// expected-error @below {{Element of GlobalAnnotationValuesAttr annotationsarray must start with a string}}
module attributes {cir.global_annotations = #cir<global_annotations [[2,[1,2]]]>} {}

// -----

// expected-error @below {{The second element of GlobalAnnotationValuesAttrannotations array element must be of type AnnotationValueAttr}}
module attributes {cir.global_annotations = #cir<global_annotations [["2",[1,2]]]>} {}
